gcc/testsuite/g++.dg/template/redecl1.C
// PR c++/15025

template <int> struct X; 
struct X {}; // { dg-error "" }
